--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,27 +8,43 @@ server {
     listen 443 ssl http2;
     server_name adlermore.ru www.adlermore.ru;
 
-    ssl_certificate /etc/letsencrypt/live/adlermore.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/adlermore.ru/privkey.pem;
-    
-    # Улучшения безопасности SSL
+    # Пути к SSL-файлам (ПРОВЕРЬТЕ, что файлы существуют!)
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/certificate.key;
+    ssl_trusted_certificate /etc/nginx/ssl/certificate_ca.crt;
+
+    # Безопасность SSL
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256";
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1d;
     ssl_session_tickets off;
+    ssl_buffer_size 8k;
 
-    # HSTS
+    # HSTS и другие заголовки безопасности
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Корневая директория и обработка React
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        expires 0;
+    }
+
+    # Блокировка доступа к скрытым файлам
+    location ~ /\.(?!well-known) {
+        deny all;
     }
 
     # Обработка ошибок
+    error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
