--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,9 +9,9 @@ server {
     server_name adlermore.ru www.adlermore.ru;
 
     # Пути к SSL-файлам (ПРОВЕРЬТЕ, что файлы существуют!)
-    ssl_certificate /nginx/ssl/certificate.crt;
-    ssl_certificate_key /nginx/ssl/certificate.key;
-    ssl_trusted_certificate /nginx/ssl/certificate_ca.crt;
+    ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
+    ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
 
     # Безопасность SSL
     ssl_protocols TLSv1.2 TLSv1.3;
