--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,52 +1,29 @@
-server {
-    listen 80;
-    server_name adlermore.ru www.adlermore.ru;
-    return 301 https://$host$request_uri;
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl http2;
-    server_name adlermore.ru www.adlermore.ru;
-
-    # Пути к SSL-файлам (ПРОВЕРЬТЕ, что файлы существуют!)
-    ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
-    ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
-    ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
-
-    # Безопасность SSL
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256";
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
-    ssl_session_tickets off;
-    ssl_buffer_size 8k;
-
-    # HSTS и другие заголовки безопасности
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    # Корневая директория и обработка React
-    root /usr/share/nginx/html;
-    index index.html;
-
-    location / {
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        expires 0;
+http {
+    server {
+        listen 80;
+        server_name adlermore.ru www.adlermore.ru;
+        return 301 https://$host$request_uri;
     }
 
-    # Блокировка доступа к скрытым файлам
-    location ~ /\.(?!well-known) {
-        deny all;
-    }
+    server {
+        listen 443 ssl http2;
+        server_name adlermore.ru www.adlermore.ru;
 
-    # Обработка ошибок
-    error_page 404 /index.html;
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+        ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
+        ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
+        ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256";
+
+        location / {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ /index.html;
+        }
     }
 }
