--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
@@ -10,16 +10,12 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
 
         ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
         ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
         ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers on;
-        ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256";
 
         location / {
             root /usr/share/nginx/html;
