--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,10 +12,11 @@ http {
     server {
         listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
-
-        ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
-        ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
-        ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
+        ssl_certificate /etc/letsencrypt/live/adlermore.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/adlermore.ru/privkey.pem;
+        # ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
+        # ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
+        # ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
 
         location / {
             root /usr/share/nginx/html;
