--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,8 @@ http {
     server {
         listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
-        ssl_certificate /etc/letsencrypt/live/adlermore.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/adlermore.ru/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/fullchain1.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey1.pem;
         # ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
         # ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
         # ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
