--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,8 +1,13 @@
+worker_processes auto;
+
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     server {
         listen 80;
         server_name adlermore.ru www.adlermore.ru;
@@ -10,17 +15,31 @@ http {
     }
 
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name adlermore.ru www.adlermore.ru;
+
         ssl_certificate /etc/nginx/ssl/fullchain1.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey1.pem;
-        # ssl_certificate /etc/nginx/conf.d/ssl/certificate.crt;
-        # ssl_certificate_key /etc/nginx/conf.d/ssl/certificate.key;
-        # ssl_trusted_certificate /etc/nginx/conf.d/ssl/certificate_ca.crt;
+        
+        root /usr/share/nginx/html;
+        index index.html;
 
+        # Обработка статических файлов
         location / {
-            root /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
         }
+
+        # Оптимизация статики
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
+            expires 1y;
+            add_header Cache-Control "public";
+            access_log off;
+            try_files $uri =404;
+        }
+
+        # Заголовки безопасности
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     }
 }
