--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: "3"
+version: "3.8"
+
 services:
   app:
     build: .
@@ -7,4 +8,11 @@ services:
       - "443:443"
     volumes:
       - /etc/letsencrypt/archive/adlermore.ru:/etc/nginx/ssl
-      - /etc/letsencrypt/live/adlermore.ru:/etc/nginx/ssl-links
+      - /etc/letsencrypt/live/adlermore.ru:/etc/nginx/ssl-links:ro
+    restart: unless-stopped
+    networks:
+      - webnet
+
+networks:
+  webnet:
+    driver: bridge
