--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,10 @@
-worker_processes auto;
-
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+    # Добавлена строка для правильного определения MIME-типов
+    include       /etc/nginx/mime.types;
 
     server {
         listen 80;
@@ -15,31 +13,23 @@ http {
     }
 
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
-
         ssl_certificate /etc/nginx/ssl/fullchain1.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey1.pem;
-        
-        root /usr/share/nginx/html;
-        index index.html;
 
-        # Обработка статических файлов
+        # Добавлен root для статики
+        root /usr/share/nginx/html;
+        
         location / {
             try_files $uri $uri/ /index.html;
         }
-
-        # Оптимизация статики
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2)$ {
+        
+        # Новый блок для обработки CSS/статики
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public";
-            access_log off;
             try_files $uri =404;
         }
-
-        # Заголовки безопасности
-        add_header X-Frame-Options "SAMEORIGIN";
-        add_header X-Content-Type-Options "nosniff";
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     }
 }
