--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,8 +3,8 @@ events {
 }
 
 http {
-    # Добавлена строка для правильного определения MIME-типов
     include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
     server {
         listen 80;
@@ -15,17 +15,16 @@ http {
     server {
         listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
+        
         ssl_certificate /etc/nginx/ssl/fullchain1.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey1.pem;
-
-        # Добавлен root для статики
+        
         root /usr/share/nginx/html;
         
         location / {
             try_files $uri $uri/ /index.html;
         }
         
-        # Новый блок для обработки CSS/статики
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public";
