--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,18 @@ http {
     server {
         listen 80;
         server_name adlermore.ru www.adlermore.ru;
-        return 301 https://$host$request_uri;
+        # return 301 https://$host$request_uri;
+        root /usr/share/nginx/html;
+        
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+        
+        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
+            expires 1y;
+            add_header Cache-Control "public";
+            try_files $uri =404;
+        }
     }
 
     server {
