--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 80;
         server_name adlermore.ru www.adlermore.ru;
-        # return 301 https://$host$request_uri;
+        return 301 https://$host$request_uri;
         root /usr/share/nginx/html;
         
         location / {
