--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,45 +1,49 @@
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
+    # ----------------------------
+    # HTTP — только редирект на HTTPS
+    # ----------------------------
     server {
         listen 80;
         server_name adlermore.ru www.adlermore.ru;
+
         return 301 https://$host$request_uri;
-        root /usr/share/nginx/html;
-        
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-        
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public";
-            try_files $uri =404;
-        }
     }
 
+    # ----------------------------
+    # HTTPS — основной сервер
+    # ----------------------------
     server {
         listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
-        
+
         ssl_certificate /etc/nginx/ssl/fullchain1.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey1.pem;
-        
+
         root /usr/share/nginx/html;
-        
+
+        # Главная точка входа для React SPA
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html =404;
         }
-        
+
+        # Отдача статических файлов
         location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
             expires 1y;
             add_header Cache-Control "public";
             try_files $uri =404;
+        }
+
+        # Обработка ошибки 404 (для SEO и поисковиков)
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
         }
     }
 }
