--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,43 +6,74 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # ----------------------------
-    # HTTP — только редирект на HTTPS
-    # ----------------------------
+    # Базовые настройки производительности
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
+
+    # Настройки SSL
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # HTTP → HTTPS редирект
     server {
         listen 80;
         server_name adlermore.ru www.adlermore.ru;
-
         return 301 https://$host$request_uri;
     }
 
-    # ----------------------------
-    # HTTPS — основной сервер
-    # ----------------------------
+    # Основной HTTPS сервер
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name adlermore.ru www.adlermore.ru;
 
+        # SSL сертификаты
         ssl_certificate /etc/nginx/ssl/fullchain1.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey1.pem;
 
-        root /usr/share/nginx/html;
+        # Корневая директория (ИЗМЕНИТЕ НА СВОЙ ПУТЬ!)
+        root /adlermore/adlermore.ru/build;
+        index index.html;
 
-        # Главная точка входа для React SPA
+        # Безопасность
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header Referrer-Policy "strict-origin-when-cross-origin";
+
+        # Основные location-блоки
         location / {
-            try_files $uri $uri/ /index.html =404;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Отдача статических файлов
-        location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg)$ {
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
             expires 1y;
-            add_header Cache-Control "public";
+            add_header Cache-Control "public, immutable";
+            access_log off;
             try_files $uri =404;
         }
 
-        # Обработка ошибки 404 (для SEO и поисковиков)
+        # Запрет доступа к скрытым файлам
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+
+        # Ошибки
         error_page 404 /404.html;
         location = /404.html {
+            internal;
+        }
+
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
             internal;
         }
     }
