--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,14 +13,21 @@ http {
     types_hash_max_size 2048;
 
     server {
-        listen 80;
+        listen 443 ssl;
         server_name adlermore.ru www.adlermore.ru;
 
-        root /adlermore/adlermore.ru/build;
+        root /var/www/adlermore/adlermore.ru/build;
         index index.html;
 
+        # 🔐 Безопасные заголовки
+        add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options DENY;
+        add_header X-XSS-Protection "1; mode=block";
+
+        # 🔧 Основная маршрутизация
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ /index.html =404;
         }
 
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
@@ -40,11 +47,17 @@ http {
         location = /404.html {
             internal;
         }
+                # 🔐 SSL от Certbot
+        ssl_certificate /etc/letsencrypt/live/adlermore.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/adlermore.ru/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    }
 
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
-            internal;
-        }
+    # 🔁 Редирект HTTP → HTTPS
+    server {
+        listen 80;
+        server_name adlermore.ru www.adlermore.ru;
+        return 301 https://$host$request_uri;
     }
 }
