--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,11 +25,19 @@ http {
         add_header X-Frame-Options DENY;
         add_header X-XSS-Protection "1; mode=block";
 
-        # 🔧 Основная маршрутизация
+        # 📦 Основной маршрут
         location / {
-            try_files $uri $uri/ /index.html =404;
+            try_files $uri $uri/ =404;
         }
 
+        # 🎯 Реальная отдача index.html при 404, но с правильным статусом
+        error_page 404 /index.html;
+        location = /index.html {
+            root /var/www/adlermore/adlermore.ru/build;
+            internal;
+        }
+
+        # 🔧 Кеширование статики
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
@@ -37,17 +45,14 @@ http {
             try_files $uri =404;
         }
 
+        # 🔒 Защита от .файлов
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
         }
 
-        error_page 404 /404.html;
-        location = /404.html {
-            internal;
-        }
-                # 🔐 SSL от Certbot
+        # 🔒 SSL
         ssl_certificate /etc/letsencrypt/live/adlermore.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/adlermore.ru/privkey.pem;
         include /etc/letsencrypt/options-ssl-nginx.conf;
